--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "devextreme": "19.1.3",
     "devextreme-angular": "19.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "ng2-validation": "^4.2.0",
     "ngx-cookie-service": "^2.2.0",
     "ngx-export-as": "^1.3.0",
+    "propellerkit-datetimepicker": "^1.2.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
