--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-file-saver": "^1.1.3",
     "angular-svg-icon": "^8.0.0",
     "angularjs": "0.0.1",
